1. Метод .of [#391710]