@@ -13,7 +13,7 @@ public class DepartmentsTest {
     @Test
     public void whenMissed() {
         List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -21,7 +21,7 @@ public class DepartmentsTest {
     @Test
     public void whenNonChange() {
         List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -30,7 +30,7 @@ public class DepartmentsTest {
     public void whenAscSorted() {
         List<String> input = Arrays.asList("k2/sk1/ssk1", "k2/sk1", "k2", "k2/sk1/ssk2",
                 "k1", "k1/sk2", "k1/sk1/ssk2", "k1/sk1/ssk1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1",
+        List<String> expect = List.of("k1",
                 "k1/sk1", "k1/sk1/ssk1", "k1/sk1/ssk2", "k1/sk2", "k2",
                 "k2/sk1", "k2/sk1/ssk1", "k2/sk1/ssk2");
         List<String> result = Departments.fillGaps(input);
@@ -41,7 +41,7 @@ public class DepartmentsTest {
     public void whenDescSorted() {
         List<String> input = Arrays.asList("k2/sk1/ssk1", "k2/sk1", "k2", "k2/sk1/ssk2",
                 "k1", "k1/sk2", "k1/sk1/ssk2", "k1/sk1/ssk1", "k1/sk1");
-        List<String> expect = Arrays.asList("k2", "k2/sk1", "k2/sk1/ssk1", "k2/sk1/ssk2", "k1",
+        List<String> expect = List.of("k2", "k2/sk1", "k2/sk1/ssk1", "k2/sk1/ssk2", "k1",
                 "k1/sk1", "k1/sk1/ssk1", "k1/sk1/ssk2", "k1/sk2");
         Departments.sortDesc(input);
         assertThat(input, is(expect));
